examples/test/testpolicy7418.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7418
  namespace: namespace240
spec:
  podSelector:
    matchLabels:
      key36: value13
      key14: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value38
          key18: value23
          key45: value5
      podSelector:
        matchLabels:
          key14: value24
          key42: value33
